plugins {
	id 'org.springframework.boot' version '2.7.3'
	id 'io.spring.dependency-management' version '1.0.13.RELEASE'
	id 'java'
}

group = 'MuscleUp'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

repositories {
	mavenCentral()
}

dependencies {
	// core
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	//implementation 'org.springframework.boot:spring-boot-starter-security'

	// core-test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	//testImplementation 'org.springframework.security:spring-security-test'

	// database
	runtimeOnly 'org.postgresql:postgresql'

	// liquibase
	implementation 'org.liquibase:liquibase-core:4.16.1'

	// swagger
	implementation 'org.springdoc:springdoc-openapi-ui:1.6.11'

	// json mapper
	//implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.4'
	//implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.13.4'
}

tasks.named('test') {
	useJUnitPlatform()
}
